Adicionei um parágrafo

--- a/SITEEXEMPLO/index.html
+++ b/SITEEXEMPLO/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam eligendi quidem, nemo vel recusandae laboriosam eum, cum magnam blanditiis voluptatibus quibusdam quod voluptates quisquam, asperiores quos tenetur corporis hic sit?
     </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, qui? Voluptatem esse odit nesciunt. Expedita atque consequatur dolorum iste illum voluptate quaerat facilis enim. Recusandae voluptate consectetur eius voluptatibus incidunt?</p>
 </body>
 </html>
